# open-syndrome-python

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
evaluation/: README.md  examples_combined.txt  hf_dataset_to_csv.py  promptfooconfig.yaml
evaluation/prompts/: v1_standard.txt  v2_chain_of_thought.txt
notebooks/: osi_filter_prototype.py
opensyndrome/: artifacts.py  cli.py  converters.py  filter.py  filtering.py  schema.py  validators.py
osi/: cli.py  converters.py  filtering.py  schema.py  validators.py
tests/: test_artifacts.py  test_cli.py  test_converters.py  test_filter.py  test_filtering.py
tests/definitions/v1/a/: arbovirosis_paraguay_sd.json
tests/fixtures/: fake_dataset.csv  mapping.yaml
